--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,25 @@
   font-size: 16px;
 }
 .App-header ul {
+  padding: 0;
   list-style: none;
   display: flex;
   flex-direction: row;
 }
 
-.App-header ul li {
-  padding: 0 20px;
+.App-header ul li ul {
+  padding: 0;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-header ul li a {
+  display: inline-block;
+  width: 80px;
+  height: 36px;
+  line-height: 36px;
+  background: cadetblue;
+  text-align: center;
   text-decoration: none;
 }
