--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   width: 80px;
   height: 36px;
   line-height: 36px;
-  background: cadetblue;
+  background: dodgerblue;
   text-align: center;
   text-decoration: none;
 }
