--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-@import-normalize;
 body {
   margin: 0;
   padding: 0;
@@ -12,4 +11,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
 }
